# deepberry

./: CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py
data/models/: detection.cfg  memo.txt
doc/: authors.rst  conf.py  environment.yml  index.rst  make.bat  readme.rst  usage.rst
doc/examples/: generate_training_dataset.ipynb  tracking.ipynb  training_segmentation.ipynb
examples/: ellipse_and_features.ipynb  ellipse_and_features.py  generate_training_dataset.ipynb  generate_training_dataset.py  toremove.py  tracking.ipynb  tracking.py  training_detection.ipynb  training_segmentation.ipynb
examples/data/model/: .gitattributes
examples/data/temporal/: 1623773116.csv  1623876616.csv  1624135835.csv  1624193406.csv  1624251004.csv  1624366202.csv  1624423802.csv  1624567809.csv  1624625406.csv  1624740608.csv  1624999813.csv  (+4 more)
scripts/: action_learning.py  annotation.py  color.py  color_individual.py  cpd_tests.py  data.py  dt.py  image_index.py  image_registration.py  individual_color.py  individual_growth.py  millerandage.py  min_cost_flow.py  multi_angles.py  registration.py  run_modulor.py  run_pipeline.py  seg.py  temporal.py  temporal_develop.py  tracking_gif.py  training_maskrcnn.py  training_segmentation.py  traits.py  validation.py
scripts/model_training/: generate_training_datasets.py  train_berry_detection.ipynb  training_seg.py  validation.py
scripts/paper/: annotation_example.py  berry_filtering.py  dataset_infos.py  dt.py  fig_segmentation_output.py  fig_segmentation_pipeline.py  fig_tracking_pipeline.py  graphs_validation.py  mean_berry.py  ruptures.py  single_berry.py  testset_metrics.py  testset_predictions.py  tracking_accuracy.py  tracking_accuracy_benchmark.py  tracking_annotation.py  tracking_benchmark.py  validation.py  video_berry_growth.py
scripts/phenoarch/: image_index.py  pipeline_modulor.py
test/: test_dataset.py  test_features.py  test_segmentation.py  test_temporal.py  test_tracking.py  test_utils.py
(+34 files in other folders)
